feat(LZ77): Buggy LZ77 complete.